--- a/03 Gradient Descent.ipynb
+++ b/03 Gradient Descent.ipynb
@@ -9,14 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
     "from mpl_toolkits.mplot3d.axes3d import Axes3D\n",
     "from matplotlib import cm # color map\n",
+    "\n",
+    "from sympy import symbols, diff\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -1051,24 +1054,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Partial Derivatives and  Symbolic Computation\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "our cost function f(x, y) is 1/(3**(-x**2 - y**2) + 1)\n",
+      "partial derivative wrt x is 2*3**(-x**2 - y**2)*x*log(3)/(3**(-x**2 - y**2) + 1)**2\n",
+      "The value of f(x,y) at x=1.8 and y=1.0 is: 0.990604794032582\n",
+      "Value of partial derivative wrt x is 0.0368089716197505\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b =symbols ('x, y')\n",
+    "\n",
+    "print('our cost function f(x, y) is',f(a, b))\n",
+    "print('partial derivative wrt x is',diff(f(a,b), a))\n",
+    "print('The value of f(x,y) at x=1.8 and y=1.0 is:',\n",
+    "      f(a,b).evalf(subs={a:1.8,b:1.0}))\n",
+    "\n",
+    "print('Value of partial derivative wrt x is',\n",
+    "      diff(f(a,b), a).evalf(subs={a:1.8,b:1.0}))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9906047940325824"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
