--- a/03 Gradient Descent.ipynb
+++ b/03 Gradient Descent.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "1.7976931348623157e+308"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1090,22 +1090,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Batch Gradient Descent With SymPy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9906047940325824"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "values in gradient array: [2.01013037525579e-11 1.11673909736433e-11]\n",
+      "Minimum Occurs at x value of: 3.45838599885832e-11\n",
+      "Minimum Occurs at y value of: 1.92132555492129e-11\n",
+      "The cost is: 0.500000000000000\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "#setup \n",
+    "multiplier = 0.1 \n",
+    "max_iter = 500\n",
+    "params = np.array([1.8,1.0]) #initial guess\n",
+    "\n",
+    "for n in range(max_iter):\n",
+    "    gradient_x = diff(f(a,b), a).evalf(subs={a:params[0],b:params[1]})\n",
+    "    gradient_y = diff(f(a,b), b).evalf(subs={a:params[0],b:params[1]})\n",
+    "    gradients = np.array([gradient_x,gradient_y])\n",
+    "    params = params - multiplier * gradients\n",
+    "#results\n",
+    "print('values in gradient array:', gradients)\n",
+    "print('Minimum Occurs at x value of:', params[0])\n",
+    "print('Minimum Occurs at y value of:', params[1])\n",
+    "print('The cost is:', f(params[0],params[1]))"
+   ]
   },
   {
    "cell_type": "code",
