--- a/04 Valuation Tool.ipynb
+++ b/04 Valuation Tool.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,13 +65,122 @@
        "        1.84555336e+01, 3.56674032e+02, 1.26530632e+01]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "property_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr = LinearRegression().fit(features, target)\n",
+    "fitted_vals = regr.predict(features)\n",
+    "\n",
+    "# Calculating MSE \n",
+    "MSE = mean_squared_error(target, fitted_vals)\n",
+    "RMSE = np.sqrt(MSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_log_estimate(nr_rooms,\n",
+    "                     students_per_classroom,\n",
+    "                     next_to_river=False,\n",
+    "                     high_confidence=True):\n",
+    "    #configure property\n",
+    "    property_stats[0][RM_IDX] = nr_rooms\n",
+    "    property_stats[0][PTRATIO_IDX] = students_per_classroom\n",
+    "    \n",
+    "    if next_to_river:\n",
+    "        property_stats[0][CHAS_IDX] = 1\n",
+    "    else:\n",
+    "        property_stats[0][CHAS_IDX] = 0\n",
+    "    \n",
+    "    #make prediction\n",
+    "    #log_estimate = round(regr.predict(property_stats)[0][0],2)\n",
+    "    log_estimate = regr.predict(property_stats)[0][0]\n",
+    "    \n",
+    "    # calc range\n",
+    "    if high_confidence:\n",
+    "        upper_bound = log_estimate + 2*RMSE\n",
+    "        lower_bound = log_estimate - 2*RMSE\n",
+    "        interval = 95\n",
+    "    else:\n",
+    "        upper_bound = log_estimate + RMSE\n",
+    "        lower_bound = log_estimate - RMSE\n",
+    "        interval = 68\n",
+    "    \n",
+    "    return log_estimate, upper_bound, lower_bound, interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.776758191480399, 2.9642703266775294, 2.589246056283269, 68)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_log_estimate(3,20,next_to_river=True, high_confidence=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_it_prime(n):\n",
+    "    #TODO: Write your code here.\n",
+    "    if n > 1:\n",
+    "        for x in range (2,n//2):\n",
+    "            if (n%x) == 0:\n",
+    "                n=False\n",
+    "        else:\n",
+    "            n=True\n",
+    "    else:\n",
+    "        n=True\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_it_prime(3)"
    ]
   },
   {
