created boston_valuation calculator imported to 04

--- a/04 Valuation Tool.ipynb
+++ b/04 Valuation Tool.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "(2.776758191480399, 2.9642703266775294, 2.589246056283269, 68)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,41 +146,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_it_prime(n):\n",
-    "    #TODO: Write your code here.\n",
-    "    if n > 1:\n",
-    "        for x in range (2,n//2):\n",
-    "            if (n%x) == 0:\n",
-    "                n=False\n",
-    "        else:\n",
-    "            n=True\n",
-    "    else:\n",
-    "        n=True\n",
-    "    return n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "21.2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_it_prime(3)"
+    "np.median(boston_dataset.target) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated property value is $827000.0.\n",
+      "At 68% confidence valuation range is\n",
+      "USD 685000.0 at the lower end to USD, and 997000.0 at the high end.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#INFLATION ADJUSTMENT TIME\n",
+    "ZILLOW_MEDIAN_PRICE = 583.3\n",
+    "SCALE_FACTOR = ZILLOW_MEDIAN_PRICE / np.median(boston_dataset.target) \n",
+    "\n",
+    "log_est, upper, lower, conf = get_log_estimate(9, students_per_classroom=15,\n",
+    "        next_to_river=False, high_confidence=False)\n",
+    "\n",
+    "#convert to todays dollars \n",
+    "\n",
+    "dollar_est =np.e**log_est * 1000 * SCALE_FACTOR\n",
+    "dollar_hi =np.e**upper * 1000 * SCALE_FACTOR\n",
+    "dollar_low =np.e**lower * 1000 * SCALE_FACTOR\n",
+    "\n",
+    "#round dollars to nearest 2 decimals\n",
+    "rounded_est = round(dollar_est,-3)\n",
+    "rounded_hi = round(dollar_hi,-3)\n",
+    "rounded_low = round(dollar_low,-3)\n",
+    "\n",
+    "print(f'The estimated property value is ${rounded_est}.')\n",
+    "print(f'At {conf}% confidence valuation range is')\n",
+    "print(f'USD {rounded_low} at the lower end to USD, and {rounded_hi} at the high end.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dollar_estimate(rm, ptratio, chas=False, large_range=True):\n",
+    "    \"\"\" \n",
+    "    Estimate price of a property in Boston \n",
+    "    \n",
+    "    Arguents: \n",
+    "    rm = # of rooms\n",
+    "    ptratio = number of students per teacher in school nearest home\n",
+    "    chas = is near or next to charles river (True or False)\n",
+    "    large_range = 'True' for 95% prediction interval, 'False' for 68% prediction interval\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    if rm < 1 or rm > 20 or ptratio < 1 or ptratio > 196 :\n",
+    "        print('Unrealistic paramaters. Try again.')\n",
+    "        return\n",
+    "    \n",
+    "    log_est, upper, lower, conf = get_log_estimate(rm, \n",
+    "            students_per_classroom = ptratio, next_to_river = chas, \n",
+    "            high_confidence = large_range)\n",
+    "\n",
+    "    #convert to todays dollars \n",
+    "    dollar_est =np.e**log_est * 1000 * SCALE_FACTOR\n",
+    "    dollar_hi =np.e**upper * 1000 * SCALE_FACTOR\n",
+    "    dollar_low =np.e**lower * 1000 * SCALE_FACTOR\n",
+    "\n",
+    "    #round dollars to nearest 2 decimals\n",
+    "    rounded_est = round(dollar_est,-3)\n",
+    "    rounded_hi = round(dollar_hi,-3)\n",
+    "    rounded_low = round(dollar_low,-3)\n",
+    "\n",
+    "    print(f'The estimated property value is ${rounded_est}.')\n",
+    "    print(f'At {conf}% confidence valuation range is')\n",
+    "    print(f'USD {rounded_low} at the lower end to USD, and {rounded_hi} at the high end.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated property value is $751000.0.\n",
+      "At 95% confidence valuation range is\n",
+      "USD 516000.0 at the lower end to USD, and 1093000.0 at the high end.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_dollar_estimate(1,1,True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated property value is $117000.0.\n",
+      "At 95% confidence valuation range is\n",
+      "USD 80000.0 at the lower end to USD, and 170000.0 at the high end.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import boston_valuation as val\n",
+    "val.get_dollar_estimate(6,60)"
    ]
   },
   {
