--- a/04 Multivariable Regression.ipynb
+++ b/04 Multivariable Regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,8 @@
     "\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "\n",
+    "import boston_valuation as val\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -3952,10 +3954,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated property value is $755000.0.\n",
+      "At 95% confidence valuation range is\n",
+      "USD 519000.0 at the lower end to USD, and 1099000.0 at the high end.\n"
+     ]
+    }
+   ],
+   "source": [
+    "val.get_dollar_estimate(8,15,False,True)"
+   ]
   },
   {
    "cell_type": "code",
