--- a/PML Projects/05-10 - Pandas exercises.ipynb
+++ b/PML Projects/05-10 - Pandas exercises.ipynb
@@ -344,18 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20e9dc87be0>"
+       "<Figure size 432x288 with 0 Axes>"
       ]
      },
-     "execution_count": 80,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -369,9 +368,10 @@
     }
    ],
    "source": [
+    "f=plt.figure()\n",
     "df3.iloc[0:30].plot.area() \n",
-    "\n",
-    "plt.legend(loc='center right', bbox_to_anchor=(1.2,0.5))"
+    "plt.legend(loc='center right', bbox_to_anchor=(1.2,0.5))\n",
+    "plt.show()"
    ]
   },
   {
