--- a/PML Projects/Untitled.ipynb
+++ b/PML Projects/Untitled.ipynb
@@ -415,8 +415,170 @@
     "\n",
     "p might be quite large.\n",
     "\n",
-    "we will let xij represent the value of the jth variabl for the Ith observation where i=1,2...,p. \"i\" will be used to index samples or observations (from 1 to n) and j will be used to index the variables (from 1to p). We let x denote a n*p matrix whose (i,j)th element is Xij. (page 10)  \n"
+    "we will let xij represent the value of the jth variabl for the Ith observation where i=1,2...,p. \"i\" will be used to index samples or observations (from 1 to n) and j will be used to index the variables (from 1to p). We let x denote a n*p matrix whose (i,j)th element is Xij. (page 10)  \n",
+    "think of x as a spread sheat with n rows p cols\n",
+    "\n",
+    "rows of x = x1,x2,x3,...xn. \n",
+    "\n",
+    "i = rows \n",
+    "n = # of rows\n",
+    "\n",
+    "j = cols \n",
+    "\n",
+    "p = # of cols"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "y hat equals f hat times x. f hat represents the resulting prediction of y. F hat is often treated like a black box in the sense that one is not typically concerned with the exact form of f hat provided that it yields accurate predictions for Y. \n",
+    "\n",
+    "Accuracy of y hat as a prediction for y depends on two quantities.  reducible error and irreducable error. f hat will not be a perfect estimation for f, this will introduce some error. it is reducable because we can potentially improve f hats accuracy by using the most appropriate statistical learning technique to estimate f. Even if we had a perfect estimate, our predictions would still ahve some error in it. this is because Y is also a function of random error. therefore no matter how well we estimate f we cannot reduce the error by the random error varibale. this is the irreducable error. \n",
+    "\n",
+    "irreducable error is larger than 0 quantity mantain unmeasured variables that useful in predicting Y since we dont measure them f cannot use them for its prediction the quanityt error may also contain unmeasureable variation. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Supervised Learning Problem\n",
+    "\n",
+    "Starting point:\n",
+    "    * Outcome measurement Y (also called dependent variable, response, target).\n",
+    "    * vectorof p predictor measurement X (also called inputs, regressors, covaiates, features, independent variables).\n",
+    "    * In the regression problem, Y is quantitive (e. price, blood pressure)\n",
+    "    * in the classification problem, Y takes values in a finite, unordered set ( survived/ died, digit )-9, cancer class of tissue sample).\n",
+    "    *  We have training data (x1,y1),....,(xn,yn). These are observations (examples, instances) of these measurements. \n",
+    "\n",
+    "on the basis of the traning data we would like to:\n",
+    "* accurately predict unseen test cases\n",
+    "* Understan which inputs affect the outcome, and how.\n",
+    "* access the quality of our predictions and inferences.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Philosophy \n",
+    "\n",
+    "* it is important to understand the ideas behind the various techniques, in order to know how and when to use them.\n",
+    "\n",
+    "* one has to understand the simpler methods first in order to grasp the more sophisticated ones. \n",
+    "\n",
+    "* it is important to accurately assess the performance of a method, to know how well or how badly it is working. (simple often works as well as fancy does.)\n",
+    "\n",
+    "* this is an exciting reseearch area, having important applications in science, industry and finance. \n",
+    "\n",
+    "* statistical learning is a fundumental ingredient in the training of a modern data scientist. \n",
+    "\n",
+    "### Unsupervised learning\n",
+    "\n",
+    "* No outcome variable, jsut predictos measured on set of samples.\n",
+    "\n",
+    "* objective is more fuzzy- find groups of sample that behave similarly, find features that behave similarly, find linear combinations of features with the most variation. \n",
+    "\n",
+    "* difficult to know how well you are doing. \n",
+    "\n",
+    "* different from supervised learning, but can be usefula s a pre-processing step for supervised learning. \n",
+    "\n",
+    "\n",
+    "#### The netflix prize\n",
+    "\n",
+    "* competition started in 2006, oct. training data is rating for 18k movies by 400k customers rating between 1 to 5.\n",
+    "\n",
+    "* Sparse training data - 98% missing.\n",
+    "\n",
+    "* objective to predicti the rating for a set of 1 million customer-movie pairs that are missing in training data. \n",
+    "\n",
+    "* original algorithm achieved a root MSE of 0.953. First team to achieve a 10% imporvement wins "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
