ML notes from textbook reading. Evening

--- a/PML Projects/Untitled.ipynb
+++ b/PML Projects/Untitled.ipynb
@@ -476,7 +476,7 @@
     "\n",
     "### Unsupervised learning\n",
     "\n",
-    "* No outcome variable, jsut predictos measured on set of samples.\n",
+    "* No outcome variable, just predictos measured on set of samples.\n",
     "\n",
     "* objective is more fuzzy- find groups of sample that behave similarly, find features that behave similarly, find linear combinations of features with the most variation. \n",
     "\n",
@@ -493,14 +493,141 @@
     "\n",
     "* objective to predicti the rating for a set of 1 million customer-movie pairs that are missing in training data. \n",
     "\n",
-    "* original algorithm achieved a root MSE of 0.953. First team to achieve a 10% imporvement wins "
+    "* original algorithm achieved a root MSE of 0.953. First team to achieve a 10% imporvement wins one million dollars. \n",
+    "\n",
+    "### statistical Learning verses Machine Learning\n",
+    "\n",
+    "* ML arose as a sufield of AI \n",
+    "* Statistical Learning arose as a subfield of statistics.\n",
+    "* Lots of overlap - focus on supervised and unsupervised problems.\n",
+    "    * ML greater emphasis on large scale applications and prediction accuracy. \n",
+    "    * statistical learning emphasises models and their interpretability, precision and uncertainty.\n",
+    "* the distinction  has become more and more blurred, there is a great deal of cross-fertilization\n",
+    "* ML has the upper hand in marketing. (buzzword)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### What is stasistical learning\n",
+    "\n",
+    "Shown are sales vs tv, radio, and newspaper, with a blue linear-regression line fit seperately to each. Can we predict sales using these three? Perhaps we can do better using a model. \n",
+    "\n",
+    "$Sales \\thickapprox f(TV, Radio, Newspaper)$\n",
+    "\n",
+    "\n",
+    "## Notation \n",
+    "\n",
+    "Here sales is a response or target that we wish to predict. We generally refer to the response as Y. TV is a feature, oinput opredictor we name it $X_{1}$ . Radio as $X_{2}$ and so on. we can refer to the input vector collectively as:\n",
+    "\n",
+    "X=\\begin{pmatrix}\n",
+    "X_{1}\\\\ \n",
+    "X_{2}\\\\ \n",
+    "X_{3}\n",
+    "\\end{pmatrix}\n",
+    "\n",
+    "now we write our model as \n",
+    "\n",
+    "$Y = f(X)+\\epsilon$\n",
+    "\n",
+    "where $\\epsilon$ captures measurement errors and other descrepencies. \n",
+    "\n",
+    "\n",
+    "## what is $f(X)$ good for?\n",
+    "\n",
+    "* with a good$f$ we can make predictions of Y at new points X=x.\n",
+    "\n",
+    "* we can understand the componenets of $X = (X_{1},X_{2},.....,X_{p})$ are important in explaining $Y$ and which are irrelevant. E.g. Senority and years of education have a big impact on income, but marital Status typically does not. \n",
+    "\n",
+    "* depending on the complexity of $f$ we may not be able to understand how each component $X_{j}$ of $X$ affects $Y.$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is there an ideal $f(x)$? In particular, what is a good vlaue for $f(x)$ at any selecte value of $X$, say $X=4$ there can be many $Y$ values at  $X=4$. A good value is \n",
+    "\n",
+    "$$f(4)=E(Y|X=4)$$\n",
+    "\n",
+    "$E(Y|X=4)$ means expected value (average) of $Y$ given $X=4$.\n",
+    "this ideal $f(x) = E(Y|X=x)$ is called regression function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The regression function $f(x)$\n",
+    "\n",
+    "* is also defined for vector $X$; e.g.\n",
+    "    $f(x) = f(x_1,x_2,x_3) = E(Y|X_1=x_x, X_2=x_2, X_3=x_3 )$\n",
+    "\n",
+    "* Is the ideal or optimal predictor of Y with regard to mean-squared prediction error: $f(x) =E(Y|X=x)$ is the function that minimizes $E[(Y-g(X))^2|X=x]$ over all functions $g$ at all points $X = x$. \n",
+    "\n",
+    "* $\\epsilon = Y - f(x)$ is the Irreducable error. -i.e. even if we knew $f(x)$, we would still make errors in prediction, since at each $X=x$ there is typically a distribution of possible $Y$ values.\n",
+    "\n",
+    "* for any estimate  $f\\hat(x)$ of $f(x)$, we have:  \n",
+    "$$E[(y-f\\hat(X))^2|X=x]=[f(x)-(f\\hat(x)]^2+ Var(\\epsilon)$$\n",
+    "\n",
+    "    * in the second half of the equation epsilon is Irreducable because by it's given nature it is our error. our function and estimate however are reduceable. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to estimate $f$\n",
+    "\n",
+    "* typically we have few if any data points with $X=4$ exactly.\n",
+    "\n",
+    "* so we can' compute $E(Y|X=x)$!\n",
+    "\n",
+    "* relax the definition and let\n",
+    "$$F\\hat(x) = Ave(Y|X \\epsilon N(x))$$\n",
+    "\n",
+    "Where $N(x)$ is some neighborhood of $x$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -508,84 +635,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
