--- a/PML Projects/Untitled.ipynb
+++ b/PML Projects/Untitled.ipynb
@@ -593,93 +593,241 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "* nearest neighbor averaging can be pretty good for small $p$ -i.e. $p<=4$ and large-ish $N$. \n",
+    "* We will discuss smoother versions, such as kernal and spline smoothing later in the course. \n",
+    "* Nearest neighbor methods can be lousy when $p$ is large. Reason: the curse of dimensionality. Nearest neighbors tend to be far away in high dimensions. \n",
+    "    * we need to get a reasonable fraction of the $N$ values of $y_i$ to average to bring variance down -e.g. 10%.\n",
+    "    * a 10% neighborhood in high dimensions need no longer be local, so we lose the spirit of estimating  $E(Y|X =x)$ by local averaging. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parametric and Structured Models. \n",
+    "\n",
+    "The Linear model is an important example of a parametric model: \n",
+    "$$F_L(X)=\\beta_0 + \\beta_1X_1 + \\beta_2X_2...\\beta_pX_p $$\n",
+    "\n",
+    "* a linear model is specified in terms of $p+1$ parameters $\\beta_0,\\beta_1,\\beta_2....\\beta_p$. \n",
+    "* we estimate the parameters by fitting the model to training data. \n",
+    "* although it is almost never correct, a linear model often serves as a good and interpretable approximation to the unknown true function $f(x)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### see diagrams in video 4\n",
+    "\n",
+    "A linear model $\\hat{f}_L(X)=\\hat{\\beta}_0+\\hat{\\beta}X$ gives a reasonable fit here.\n",
+    "\n",
+    "\n",
+    "A quadratic model $\\hat{f}_Q(X)=\\hat{\\beta}_0+\\hat{\\beta}_1X+\\hat{\\beta}_2X^2$ fits slightly better. \n",
+    "\n",
+    "Simulated example. red points are simulated values for income from the model. \n",
+    "$$income=f(education,seniority)+\\epsilon$$\n",
+    "$f$ is the blue surface.\n",
+    "\n",
+    "Linear regression model fit to the same area. not nearly as close. \n",
+    "\n",
+    "$$\\hat{f}_L(education,seniority)=\\hat{\\beta}_0+\\hat{\\beta}_1x * education+ \\hat{\\beta}_2x * seniority$$\n",
+    "\n",
+    "More fixable regression model(seriously check the video) $\\hat{f}_S(education,seniority) fit to the simulated data. Here we use a technique called a thin-plate-spline to fit a flexible surface. We control the roughness of the fit (chapter 7).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### some trade-offs \n",
+    "* prediction accuracy vs interpretability. -linear models are easy to iterpret; thin-plate splines are not. \n",
+    "\n",
+    "* good fit verses over-fit or under-fit. -how do we know when the fit is just right? \n",
+    "\n",
+    "* Parsimony(simpler) verses black-box. - we often prefer a simpler model involving fewer variables over a black-box predictor involving them all. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accessing Model Accuracy. \n",
+    "\n",
+    "suppose we fit a model $\\hat{f}(x)$ to some training data $Tr=\\{x_i,y_i\\}_{1}^{N}$, and wewish to see how well it performs.\n",
+    "* we could compute the average squared prediction error over Tr (training):\n",
+    "\n",
+    "    $$MSE_{Tr}=Ave_{i\\epsilon Tr}\\left [ y_{i}-\\hat{f}(x_i) \\right ]^2$$\n",
+    "    \n",
+    "This may be biased toward more overfit models. \n",
+    "\n",
+    "* instead we should if possible,compute it using fresh TEST data\n",
+    "$Te=\\{x_i,y_i\\}_{1}^{M}$\n",
+    "\n",
+    "$$MSE_{Te}=Ave_{i\\epsilon Te}\\left [ y_{i}-\\hat{f}(x_i) \\right ]^2$$\n",
+    "\n",
+    "(See video 5) Black curve is truth. red curve on right is $MSE_{Te}$, grey curve is $MSE_{Tr}$. Orange, blue and green curves/squares correspond to fits of different flexibility. \n",
+    "\n",
+    "here the truth is smoother, so the smoother fit and linear model do really well. \n",
+    "\n",
+    "here the truth is wiggly and the noise is low so the more flexible fits do the best. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bias-Varince Trade-off\n",
+    "\n",
+    "Suppose we have fit a model $\\hat{f}(x)$ to some training data $Tr$, and let $(x_0,y_0)$ be a test observation drawn from the population. If the true model is $Y= f(X) +\\epsilon( with f(x)=E(Y|X=x))$, then\n",
+    "\n",
+    "$$E(y_0-\\hat{f}(x_0))^2 =Var(\\hat{f}(x_0))+[Bias(\\hat{f}(x_0))]^2+Var(\\epsilon)$$\n",
+    "\n",
+    "The expectation averages over the viability of y_0 as well as the variability in $Tr$. Note that $Bias(\\hat{f}(x_0))]=E [\\hat{f}(x_0)]-f(x_0).$\n",
+    "\n",
+    "typically as the flexibility of $\\hat{f}$ increases, it's variance increases, and its bias decreases. So choosing the flexibility based on average test error amounts to a bias variance trade off. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
