ML notes from textbook reading. Final commit for tonight.

--- a/PML Projects/Untitled.ipynb
+++ b/PML Projects/Untitled.ipynb
@@ -686,18 +686,45 @@
     "\n",
     "The expectation averages over the viability of y_0 as well as the variability in $Tr$. Note that $Bias(\\hat{f}(x_0))]=E [\\hat{f}(x_0)]-f(x_0).$\n",
     "\n",
-    "typically as the flexibility of $\\hat{f}$ increases, it's variance increases, and its bias decreases. So choosing the flexibility based on average test error amounts to a bias variance trade off. "
+    "typically as the flexibility of $\\hat{f}$ increases, it's variance increases, and its bias decreases. So choosing the flexibility based on average test error amounts to a bias variance trade off. See video for further visual examples of Bias-Variance trade off."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Clasification Problems\n",
+    "\n",
+    "Here the response variable is qualitative -e.g. email is one of $C=(spam,ham)(ham=good email)$, digit class is one of $C = \\{0,1,2....,9\\}$. our goals are to:\n",
+    "* Build a classifier $C(X)$ that assigns a class label from $C$ to a future unlabeled observation $X$. \n",
+    "\n",
+    "* Assess the uncertainty in each classification\n",
+    "\n",
+    "* Understand the roles of the different predictors amoung $X=(X_1,X_2,...X_p)$."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Is there an ideal $C(X)$? Suppose the $K$ elements in $C$ are numbered $1,2....,K$. let $p_k(x)=Pr(Y=k|X=x)k=1,2,...,K$.\n",
+    "\n",
+    "These are conditional class probabilites at $x$; e.g. See little barplot at $x=5$. Then the Bayes optimal classifer at $x$ is \n",
+    "$$C(x)=j if p_j(x)=max\\{p_1(x),...,pk(x)\\}$$\n",
+    "\n",
+    "Nearest neighbor averaging can be used as before. Also breaks down as dimension grows. However the impact on $\\hat{C}(x)$ is less than on $\\hat{p}_k(x), k=1,...,K$\n",
+    "\n",
+    "## Classification: some details \n",
+    "* Typically we measure the performance of $\\hat{C}(x)$ using the msicalulation error rate:\n",
+    "\n",
+    "$$Err_{Te}=Ave_{i\\epsilon Te}I[y_i\\not\\equiv\\hat{C}(x_i)]$$\n",
+    "\n",
+    "* The Bayes classifier (using the true $p_k(x)$) has the smallest error (in the population).\n",
+    "\n",
+    "* Support-vector machines build structured models for $C(x)$.\n",
+    "\n",
+    "* We will also build structured models for representing the $p_k(x)$. e.g Logistic regression,generalized additive models. "
+   ]
   },
   {
    "cell_type": "markdown",
