staistical learning Multiple linear regression evening

--- a/PML Projects/99-002-Statistical learning chapters 3+4 notes.ipynb
+++ b/PML Projects/99-002-Statistical learning chapters 3+4 notes.ipynb
@@ -394,7 +394,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Extensions of the linear model\n",
+    "\n",
+    "Removing the additive assumption: interactions and nonlinearity\n",
+    "Interactions:\n",
+    "* in ourprevious analysis of the Advertising data, we assumed that the effect on sales of increasing one advertising medium is independent of the amount spent on the other media. \n",
+    "* for example the linear model $$\\hat{sales} = \\beta_0 + \\beta_1 * TV+ \\beta_2 * radio +\\beta_3 * newspaper$$ States that the average effect on $sales$ of a one-unit increase in $TV$ is always $\\beta_1$, regardless of the amount spent on $radio$."
+   ]
   },
   {
    "cell_type": "markdown",
