k means clustering project init

--- a/PML Projects/13-01 K Means Algorithm Theory .ipynb
+++ b/PML Projects/13-01 K Means Algorithm Theory .ipynb
@@ -86,8 +86,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll start by showing you how to use SciKit-Learn's own built in data generation tools to create some clusters and then test the K-means "
+    "We'll start by showing you how to use SciKit-Learn's own built in data generation tools to create some clusters and then test the K-means algorithm.  \n",
+    "\n",
+    "Then for the portfolio project you'll work with real world data and try to cluster universities into groups based off of their features and see if you can distinguish between private and public schools."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
