TensorFlow overview notes

--- a/PML Projects/18-01 Introduction to Neural Networks. .ipynb
+++ b/PML Projects/18-01 Introduction to Neural Networks. .ipynb
@@ -158,7 +158,10 @@
     "* Up next we will give some background off what the TensorFlow Library is and how we can use it. \n",
     "\n",
     "* After that we will show how to install TensorFlow\n",
-    "    * MacOS and Linux users can use "
+    "    * MacOS and Linux users can use a pip install\n",
+    "    \n",
+    "    * Windows users will need to set up a VirtualBox\n",
+    "* Let's get started. "
    ]
   },
   {
