estimators with tensorflow2.0 exercise complete.

--- a/PML Projects/18-05 TensorFlow Estimators.ipynb
+++ b/PML Projects/18-05 TensorFlow Estimators.ipynb
@@ -4,6 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Heads up\n",
+    "\n",
+    "This was utilizing a follow along lesson using the previous generation tensorflow libaries whil I at the current time of writing this installed 3 month old TensorFlow 2.0 beta. This follows the famous irids flower dataset and I attempted to implement both practices with fruitless results. Im leaving this for posterity purposes for now in case i can go back and utilize train and test traditional practices more effectively here later. Otherwise check files 18-05a instead. \n",
+    "\n",
+    "\n",
     "* TF has an Estimator object we can use to quickly create models with needing to manually define the graph as we did before. \n",
     "\n",
     "* Estimator steps. \n",
