--- a/PML Projects/18-05a TFlow 2 estimators.ipynb
+++ b/PML Projects/18-05a TFlow 2 estimators.ipynb
@@ -171,115 +171,28 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sepal_length  sepal_width  petal_length  petal_width\n",
-       "0           6.4          2.8           5.6          2.2\n",
-       "1           5.0          2.3           3.3          1.0\n",
-       "2           4.9          2.5           4.5          1.7\n",
-       "3           4.9          3.1           1.5          0.1\n",
-       "4           5.7          3.8           1.7          0.3"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 120 entries, 0 to 119\n",
+      "Data columns (total 4 columns):\n",
+      "sepal_length    120 non-null float64\n",
+      "sepal_width     120 non-null float64\n",
+      "petal_length    120 non-null float64\n",
+      "petal_width     120 non-null float64\n",
+      "dtypes: float64(4)\n",
+      "memory usage: 3.8 KB\n"
+     ]
     }
    ],
    "source": [
-    "train.head()"
+    "train.info()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def input_evaluation_set():\n",
-    "#     features = {'sepal_length': np.array([6.4, 5.0]),\n",
-    "#                 'sepal_width':  np.array([2.8, 2.3]),\n",
-    "#                 'petal_length': np.array([5.6, 3.3]),\n",
-    "#                 'petal_width':  np.array([2.2, 1.0])}\n",
-    "#     labels = np.array([2, 1])\n",
-    "#     return features, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +220,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[NumericColumn(key='sepal_length', shape=(1,), default_value=None, dtype=tf.float32, normalizer_fn=None),\n",
+       " NumericColumn(key='sepal_width', shape=(1,), default_value=None, dtype=tf.float32, normalizer_fn=None),\n",
+       " NumericColumn(key='petal_length', shape=(1,), default_value=None, dtype=tf.float32, normalizer_fn=None),\n",
+       " NumericColumn(key='petal_width', shape=(1,), default_value=None, dtype=tf.float32, normalizer_fn=None)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feat_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +251,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0731 17:41:53.452425  7516 estimator.py:1811] Using temporary folder as model directory: C:\\Users\\Corvus\\AppData\\Local\\Temp\\tmpbkerz81r\n"
+      "W0731 18:01:23.178097 15412 estimator.py:1811] Using temporary folder as model directory: C:\\Users\\Corvus\\AppData\\Local\\Temp\\tmprbpx23pd\n"
      ]
     }
    ],
@@ -332,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,23 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0731 17:41:53.490296  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+      "W0731 18:01:23.217990 15412 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-      "W0731 17:41:54.134223  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow_estimator\\python\\estimator\\head\\base_head.py:574: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "W0731 18:01:23.934478 15412 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow_estimator\\python\\estimator\\head\\base_head.py:574: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use `tf.cast` instead.\n",
-      "W0731 17:41:54.248923  7516 deprecation.py:506] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\optimizer_v2\\adagrad.py:105: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "W0731 18:01:24.067104 15412 deprecation.py:506] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\optimizer_v2\\adagrad.py:105: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "W0731 17:41:54.400825  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\array_ops.py:1340: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "W0731 18:01:24.232688 15412 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\array_ops.py:1340: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
      ]
@@ -365,10 +301,10 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow_estimator.python.estimator.canned.dnn.DNNClassifierV2 at 0x1f9fb41a358>"
+       "<tensorflow_estimator.python.estimator.canned.dnn.DNNClassifierV2 at 0x1f535d64208>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0731 17:42:02.603203  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+      "W0731 18:01:32.748054 15412 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use standard file APIs to check for files with this prefix.\n"
      ]
@@ -396,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy: 0.867\n"
+      "test accuracy: 0.933\n"
      ]
     }
    ],
@@ -411,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,16 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction is \"Setosa\" (77.2%), expected \"Setosa\"\n",
-      "Prediction is \"Versicolor\" (46.9%), expected \"Versicolor\"\n",
-      "Prediction is \"Virginica\" (61.3%), expected \"Virginica\"\n"
+      "Prediction is \"Setosa\" (86.8%), expected \"Setosa\"\n",
+      "Prediction is \"Versicolor\" (45.2%), expected \"Versicolor\"\n",
+      "Prediction is \"Virginica\" (45.6%), expected \"Virginica\"\n"
      ]
     }
    ],
@@ -456,6 +392,13 @@
     "    print('Prediction is \"{}\" ({:.1f}%), expected \"{}\"'.format(\n",
     "        SPECIES[class_id], 100 * probability, expec))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
